--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
